--- a/index.html
+++ b/index.html
@@ -83,5 +83,5 @@
   </main>
 
 </body>
-<script type="text/javascript" src="src/js/main.js"></script>
+<script type="module" src="src/js/main.js"></script>
 </html>
